@startuml

interface Recipe

interface Service {
  +Recipes(): []Recipe
  +Exec(r []Recipe, s Session)
}

interface Session {
  +Log(): *zap.Logger
  +Message(key string): Message
  +Auth(tag string): (ApiClient, error)
}

Session *-- Message
interface Message {
  +WithParam(p interface{}): Message
  +Tell()
  +TellError()
  +TellWarn()
  +TellSuccess()
  +TellFailure()
  +AskRetry()
  +AskWarn()
  +AskText()
}


Session <|-- SessionImpl
Message <|-- UIMessage
SessionImpl *-- UIMessage
SessionImpl *-- UIResult
SessionImpl *-- UI
class SessionImpl {
  #ui: UI
  +Append(uir UIResult)
}

interface UIResult
interface UI {
  +Tell(): UIResult
  +TellError(): UIResult
  +TellWarn(): UIResult
  +TellSuccess(): UIResult
  +TellFailure(): UIResult
  +AskRetry(): UIResult
  +AskWarn(): UIResult
  +AskText(): UIResult
}
UI .. UIResult

UI <|-- ConsoleUI
class ConsoleUI {
  +In: io.Reader
  +Out: io.Writer
}

UI <|-- WebUI
class WebUI {
}

@enduml
